# DailyPrayerTimeSoftware

./: .gitignore  CHANGELOG.md  DailyPrayerTime.CrossPlatform.slnx  LICENSE  PRIVACY.md  README.cross-platform.md  README.md  installer.iss  installer_x64.iss  installer_x86.iss  overlay.html  package-lock.json  package.json  popup.html  publish_portable.ps1  publish_portable_x86.ps1  remaining-features.md  vite.config.js
DailyPrayerTime.DeskBand/: CSDeskBand.cs  DailyPrayerTime.DeskBand.csproj  DeskBandData.cs  Deskband.cs  PrayerTimerControl.xaml  PrayerTimerControl.xaml.cs
DailyPrayerTime.Desktop/: App.axaml  App.axaml.cs  DailyPrayerTime.Desktop.csproj  Program.cs  ViewLocator.cs  app.manifest
DailyPrayerTime.Native/: AdhanNotificationWindow.xaml  AdhanNotificationWindow.xaml.cs  App.xaml  App.xaml.cs  AppSettings.cs  CongregationTimerFullScreenWindow.xaml  CongregationTimerFullScreenWindow.xaml.cs  CongregationTimerPopup.xaml  CongregationTimerPopup.xaml.cs  DailyPrayerTime.Native.csproj  DailySummaryPopup.xaml  DailySummaryPopup.xaml.cs  DeedPopup.xaml  DeedPopup.xaml.cs  DeskBandData.cs  DeskBandDataWriter.cs  EnhancedTaskbarWindow.xaml  EnhancedTaskbarWindow.xaml.cs  LoaderWindow.xaml  LoaderWindow.xaml.cs  LocalizationManager.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  NoticeModels.cs  NotificationSoundService.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  PrayerService.cs  QiblaView.xaml  (+18 more)
src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+125 files in other folders)
