[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
image = "0.25"
rusttype = "0.9"
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
